--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "smm-sender",
 	"name": "Smm Sender",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Send your Obsidian notes to socials channels with support for multiple bots and connection testing.",
+	"description": "Send your notes to socials channels with support for multiple bots and connection testing.",
 	"author": "@mkremnev",
 	"authorUrl": "https://github.com/mkremnev",
 	"isDesktopOnly": false,
